# bumeet

./: .gitignore  README.md  bumeet-agent.spec  pyproject.toml  requirements.txt
.github/workflows/: agent-release.yml  api-deploy.yml  dev-resources-start.yml  dev-resources-stop.yml  terraform-apply.yml  terraform-plan.yml  web-deploy-prod.yml  web-deploy.yml
docs/: claude-code-handoff.md
firmware/core2/: core2.ino
firmware/coreink/: coreink.ino
infra/: .gitignore  main.tf  outputs.tf  variables.tf  versions.tf
infra/bootstrap/: main.tf  outputs.tf
infra/envs/dev/: backend.tf  main.tf  terraform.tfvars
infra/envs/prod/: backend.tf  main.tf  terraform.tfvars
infra/modules/app_service/: main.tf  outputs.tf  variables.tf
infra/modules/container_registry/: main.tf  outputs.tf  variables.tf
infra/modules/key_vault/: main.tf  outputs.tf  variables.tf
infra/modules/postgresql/: main.tf  outputs.tf  variables.tf
infra/modules/redis/: main.tf  outputs.tf  variables.tf
infra/modules/static_web_app/: main.tf  outputs.tf  variables.tf
platform/: .dockerignore  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh
platform/apps/api/: .env.example  Dockerfile  package.json  tsconfig.json
platform/apps/web/: .env.local.example  next.config.js  package.json  tailwind.config.ts
scripts/: scan_ble.py
src/bumeet_agent/: __init__.py  app.py  bootstrap.py  config.py  logging.py  simulation.py
src/bumeet_agent/ble/: __init__.py  (+4 more)
tests/unit/: test_protocol.py  test_simulation_flow.py  test_state_machine.py
(+74 files in other folders)
